--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -140,6 +140,9 @@ nav{
         background-color: rgba(254, 246, 228, 1);
 
     }
+    .btnn.active{
+        left: -100%
+    }
     .list-item{
         left: -100%;
         /* left: -100%; */
