--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -15,7 +15,6 @@
     justify-content: space-between;
     align-items: flex-start;
 }
-
 .right img{
     width: 500.68px;
     height: 463.84px;
@@ -25,12 +24,12 @@
     opacity: 0px;
 
 }
-.left-p  p span{
+.left-p p span{
     font-family: Plus Jakarta Sans;
     font-size: 64px;
     font-style: italic;
     font-weight: 200;
-    padding-right: 13px;
+    padding: 10px;
     line-height: 80.64px;
     letter-spacing: 3%;
     text-align: left;
@@ -42,7 +41,7 @@
 }
 .left-p p{
     font-family: Plus Jakarta Sans;
-    font-size: 56px;
+    font-size: 64px;
     font-weight: 700;
     line-height: 80.64px;
     letter-spacing: 0.03em;
@@ -73,31 +72,38 @@
     padding: 0;
     margin-top: 100px;
 }
-
 .line{
     width: 100%;
 }
 .line img{
     color: rgba(255, 216, 3, 1);
+    padding: 19px auto;
+    /* width: 10px; */
+}
+.p-content{
+   
     
-    padding: 12px;
-    width: 20px;
 }
 .p-content p{
     font-family: Plus Jakarta Sans;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px;
+    
+   
     color: rgba(255, 255, 255, 1);
 }
 
 @media screen and (max-width:900px){
     .home-container{
-        height: 600px;
+        height: 700px;
        
     }
     .f{
         padding-top: 10px;
+    }
+    .right{
+        display: none;
     }
     .left{
         width: 100%;
@@ -105,57 +111,55 @@
     .right img{
         display: none;
     }
-    
     .content{
       padding-top: 40px;
       padding-left: 2rem;
       padding-right: 2rem;
-        
     }
-   
     .right-p{
-        
        width: 100%;
-    
     }
-     
     .left > .left-p p{
-        /* font-family: Plus Jakarta Sans; */
-        font-size: 32px;
+        font-size: 50px;
         font-weight: 700;
-        line-height: 40.32px;
+        line-height: 49.32px;
         letter-spacing: 0.03em;
         text-align: left;
         padding-top: 30px;
-
+        
     }
     .left-p p span{
-        /* font-family: Plus Jakarta Sans; */
-        font-size: 40px;
+        font-size: 50px;
         font-style: italic;
-        font-weight: 200;
-        line-height: 40.32px;
-        letter-spacing: 0.03em;
+        font-weight: 700;
+        line-height: 49.32px;
+        /* letter-spacing: 0.05em; */
         text-align: left;
-
+        padding: 10px;
     }
-    
-
-    
+    .line img{
+        padding: 1px;
+        width: 40px;
+    }
 }
-
 @media screen and (max-width:480px) {
     .home-container{
-        height: 628px;
+        height: 708px;
+        width: 100%;
+        
     }
-    .content{
-        padding: 0 2rem;
-    }
+   
+    /* .content{
+        padding-top: 20px;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        
+    } */
 
     
     .left > .left-p p{
         font-family: Plus Jakarta Sans;
-        font-size: 32px;
+        font-size: 35px;
         font-weight: 700;
         line-height: 40.32px;
         letter-spacing: 0.03em;
@@ -163,15 +167,30 @@
         padding-top: 30px;
 
     }
+    .p-content{
+        width: 100%;
+       
+       
+
+    }
+    /* .line{
+        width: 100%;
+        height: 1px;
+        top: 628px;
+        left: 187px;
+        gap: 0px;
+        border: 4px 0px 0px 0px;
+        opacity: 0px;
+
+    } */
     .p-content p{
         font-family: Plus Jakarta Sans;
         font-size: 15px;
         font-weight: 400;
         line-height: 23px;
-        text-align: left;
+        /* text-align: center; */
         
-
-
+        
     }
     .left-p p span{
         font-family: Plus Jakarta Sans;
@@ -183,15 +202,19 @@
         text-align: left;
 
     }
+    .right-p{
+        width: 100%;
+        gap: 10px;
+    }
   
-    .right-p p {
+    /* .right-p p {
         font-family: Plus Jakarta Sans;
         font-size: 17px;
         font-weight: 400;
         line-height: 23px;
         text-align: left;
 
-    }
+    } */
     .left{
         /* width: 100%; */
         width: 356px;
@@ -202,9 +225,6 @@
         gap: 0px;
         opacity: 0px;
 
-    }
-    .right-p{
-        gap: 15px;
     }
     
     .right-p > .line-sub{
@@ -220,21 +240,14 @@
 
     }
     .line{
-        /* width: 37px;
-        padding: 10px; */
-        /* height: 0px;
-        top: 397px;
-        left: 24px;
-        gap: 0px;
-        border: 3px 0px 0px 0px;
-        opacity: 0px; */
-
-
+        width: 100%;
+        /* padding: 10px; */
     }
     .line img{
         
-        padding: 1px;
-        width: 20px;
+        padding: 2px;
+        width: 350px;
+        height: 10px;
         
         
     }
