--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -12,6 +12,7 @@
     font-weight: 500;
     line-height: 40.32px;
     text-align: center;
+    
 }
 .about-us-span p {
     font-family: Plus Jakarta Sans;
@@ -66,7 +67,8 @@
     /* margin: auto;
     text-align: center; */
     /* position: relative; */
-    width: 70%;
+    width: 100%;
+    margin-top: 40px;
     height: auto;
 
 }
@@ -93,7 +95,7 @@ button{
     .aboutt{
         /* display: block; */
    
-        margin-top: 90px;
+        /* margin-top: 0px; */
         
         
     }
@@ -122,17 +124,22 @@ button{
 
 @media screen and (max-width:400px){
  
-    .left{
-        width: 50%;
+    .left img{
+        width: 100%;
+        margin: auto;
+        text-align: center;
 
         
     }
     .aboutt{
         display: block;
         padding: 0 2rem;
-        text-align: center;
+        /* text-align: center; */
         width: 100%;
         
+        
+    }
+    .right > .about-us{
         
     }
     .right > .about-us h2{
@@ -155,17 +162,18 @@ button{
         line-height: 30px;
         text-align: left;
         color: rgba(53, 51, 66, 1);
-
-    
-
-
-
+        padding-top: 20px;
+    }
+    .styleplus{
+        width: 100%;
     }
     .styleplus p{
         font-family: Plus Jakarta Sans;
         font-size: 15px;
         font-weight: 400;
         line-height: 25px;
+        
+        
         /* text-align: left; */
     }
    
