--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -103,28 +103,6 @@ nav{
     /* display: flex; */
 }
 
-/* .header .navbar{
-    border-bottom: 2px solid white;
-    height: 80px;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    
-}
-.burger{
-    display: none;
-}
-
-.header .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: auto;
-    
-    padding: 0 1rem;
-} */
-
 @media screen and (max-width:900px){
     .logo{
         display: block;
@@ -177,15 +155,10 @@ nav{
         font-size: 18px;
         font-weight: 400;
         line-height: 50px;
-       
-        /* text-align: left; */
-
-        
-       
     }
     .list-item ul  li{
         
-        padding-top: 30px;
+        padding: 30px 0;
     }
     .btn{
         padding-top: 30px;
