--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,8 +3,8 @@
     background-color: #353342;
     background-image: url("./images/mask.png");
     width: 100%;
-    height: 887px;
-    gap: 10px;
+    height: 707px;
+    /* gap: 30px; */
     opacity: 1;
 }
 .content{
@@ -70,19 +70,15 @@
     height: 600px;
     width: 100%;
     padding: 0;
-    margin-top: 100px;
+    margin-top: 70px;
 }
 .line{
     width: 100%;
+    margin-right: 15px;
 }
 .line img{
     color: rgba(255, 216, 3, 1);
-    padding: 19px auto;
-    /* width: 10px; */
-}
-.p-content{
-   
-    
+    padding: 10px;
 }
 .p-content p{
     font-family: Plus Jakarta Sans;
@@ -102,13 +98,11 @@
     .f{
         padding-top: 10px;
     }
-    .right{
-        display: none;
-    }
+   
     .left{
         width: 100%;
     }
-    .right img{
+    .right-image{
         display: none;
     }
     .content{
