--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home-container{
     margin-top: 80px;
     background-color: #353342;
-    background-image: url("./images/mask.png");
+    background-image: url("../images/mask.png");
     width: 100%;
     height: 707px;
     /* gap: 30px; */
@@ -65,7 +65,7 @@
     
 }
 .f{
-    background: url("./images/vector.png");
+    background: url("../images/vector.png");
     height: 600px;
     width: 100%;
     padding: 0;
