--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -4,7 +4,7 @@
     gap: 57px;
     width: 100%;
     background-color: rgba(254, 246, 228, 1);
-    background-image: url("../images/mainmask.png");
+    
 }
 .about-us h2{
     font-family: Plus Jakarta Sans;
@@ -12,6 +12,7 @@
     font-weight: 500;
     line-height: 40.32px;
     text-align: center;
+    padding-bottom: 20px;
     
 }
 .about-us-span p {
@@ -90,6 +91,18 @@ button{
     border-radius: 18px;
     margin-top: 10px;
 }
+.hero-container {
+    height: 450px;
+    width: 90%;
+    margin: auto;
+    place-items: center;
+    overflow: hidden;
+  }
+  .img-div img{
+    margin: auto;
+    text-align: center;
+  }
+ 
 
 @media screen and (max-width:900px) {
     .aboutt{
