--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -38,47 +38,6 @@
     padding: 10px 0;
 
 }
-.right > .about-us > .left img{
-   
-   
-    
-}
-/* .left{
-    margin: auto;
-    text-align: center;
-    position: relative;
-    width: 100%;
-    height: 300px;
-
-} */
-/* .left .smile{
-   
-    position: absolute;
-    top: 60px;
-    left: 200px;
-    margin-top: -27px;
-   
-} */
-.left{
-    width: 100%;
-    margin: auto;
-    text-align: center;
-}
-.left img{
-    /* margin: auto;
-    text-align: center; */
-    /* position: relative; */
-    width: 100%;
-    margin-top: 40px;
-    height: auto;
-
-}
-.yellow{
-    /* position: absolute; */
-    
-   
-}
-
 button{
     font-family: Plus Jakarta Sans;
     font-size: 18px;
@@ -105,23 +64,25 @@ button{
  
 
 @media screen and (max-width:900px) {
-    .aboutt{
-        /* display: block; */
-   
-        /* margin-top: 0px; */
-        
-        
-    }
+    
     .about-us h2{
         font-family: Plus Jakarta Sans;
         font-size: 32px;
         font-weight: 500;
         line-height: 40.32px;
         text-align: center;
-        padding-top: 100px;
-    
-        
+       
     }
+    .img-div{
+        height: auto;
+        width: 100%;
+    }
+
+    .img-div img{
+        margin: auto;
+        text-align: center;
+        width: 100%;
+      }
     .styleplus p{
         padding: 20px;
     }
@@ -129,34 +90,26 @@ button{
        
         font-weight: 400;
     }
-    /* .left img{
-        width: 100%;
-    } */
-    
+    .about-us-span{
+        padding: 0;
+    }
 }
 
 @media screen and (max-width:400px){
  
-    .left img{
-        width: 100%;
+    .img-div img{
         margin: auto;
         text-align: center;
-
-        
-    }
+        width: 100%;
+      }
+      .img-div{
+        width: 100%;
+        padding: 20px;
+      }
     .aboutt{
         display: block;
         padding: 0 2rem;
-        /* text-align: center; */
         width: 100%;
-        
-        
-    }
-    .right > .about-us{
-        
-    }
-    .right > .about-us h2{
-        /* padding: 50px; */
     }
     .about-us h2{
         font-family: Plus Jakarta Sans;
@@ -175,7 +128,7 @@ button{
         line-height: 30px;
         text-align: left;
         color: rgba(53, 51, 66, 1);
-        padding-top: 20px;
+       
     }
     .styleplus{
         width: 100%;
@@ -185,12 +138,5 @@ button{
         font-size: 15px;
         font-weight: 400;
         line-height: 25px;
-        
-        
-        /* text-align: left; */
     }
-   
-
-
-    
 }
