--- a/src/pages/AboutPage.css
+++ b/src/pages/AboutPage.css
@@ -4,6 +4,7 @@
     gap: 57px;
     width: 100%;
     background-color: rgba(254, 246, 228, 1);
+    background: url('../images/mainmask.png');
     
 }
 .about-us h2{
@@ -56,13 +57,12 @@ button{
     margin: auto;
     place-items: center;
     overflow: hidden;
+    opacity: 0;
   }
   .img-div img{
     margin: auto;
     text-align: center;
   }
- 
-
 @media screen and (max-width:900px) {
     
     .about-us h2{
@@ -87,7 +87,6 @@ button{
         padding: 20px;
     }
     .about-us-span p{
-       
         font-weight: 400;
     }
     .about-us-span{
