--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 707px;
     /* gap: 30px; */
-    opacity: 1;
+    /* opacity: 1; */
 }
 .content{
     padding-top: 90px;
@@ -142,14 +142,6 @@
         width: 100%;
         
     }
-   
-    /* .content{
-        padding-top: 20px;
-        padding-left: 2rem;
-        padding-right: 2rem;
-        
-    } */
-
     
     .left > .left-p p{
         font-family: Plus Jakarta Sans;
@@ -167,24 +159,12 @@
        
 
     }
-    /* .line{
-        width: 100%;
-        height: 1px;
-        top: 628px;
-        left: 187px;
-        gap: 0px;
-        border: 4px 0px 0px 0px;
-        opacity: 0px;
-
-    } */
+   
     .p-content p{
         font-family: Plus Jakarta Sans;
         font-size: 15px;
         font-weight: 400;
         line-height: 23px;
-        /* text-align: center; */
-        
-        
     }
     .left-p p span{
         font-family: Plus Jakarta Sans;
@@ -201,14 +181,6 @@
         gap: 10px;
     }
   
-    /* .right-p p {
-        font-family: Plus Jakarta Sans;
-        font-size: 17px;
-        font-weight: 400;
-        line-height: 23px;
-        text-align: left;
-
-    } */
     .left{
         /* width: 100%; */
         width: 356px;
@@ -217,7 +189,7 @@
         top: 212px;
         left: 19px;
         gap: 0px;
-        opacity: 0px;
+        /* opacity: 0px; */
 
     }
     
@@ -228,7 +200,7 @@
         left: 24px;
         gap: 0px;
         border: 3px 0px 0px 0px;
-        opacity: 0px;
+        /* opacity: 0px; */
 
     /* angle: -0 deg; */
 
